# 6502Assembler

./: .gitignore  Build.sh  CMakeLists.txt  README.md
Documentation/: BuildInstructions.md  Usage.md
Tests/SymbolTable/: CMakeLists.txt  TestIsLabel.cpp
Tests/Tokenizer/: CMakeLists.txt  TestIndexOfOper.cpp  TestIndexOfOperInTokenizedLine.cpp  TestOper.cpp  TestOperStartIndexInTokenizedLine.cpp
Tests/Translate/: CMakeLists.txt  TestHelperDecimalToBinary.cpp  TestOperByte.cpp  TestOperHighByte.cpp  TestOperLowByte.cpp  TestStandardizeInstruction.cpp  TestTranslateInstructionToHexOpcode.cpp  TestTranslationHelperAddressAsInt.cpp  TestTranslationHelperIsBranchInstruction.cpp
src/: Assemble.cpp  OpCodes.cpp  OpCodes.h  SymbolTable.cpp  SymbolTable.h  Tokenizer.cpp  Tokenizer.h  Translate.cpp  Translate.h
